working with semantic

--- a/webapp/view/Homepage.view.html
+++ b/webapp/view/Homepage.view.html
@@ -9,7 +9,7 @@
 					  <a class="item" data-tab="third">Third</a>
 					</div>
 					<div class="ui bottom attached active tab segment" data-tab="first">
-					  <input id="testname" value="test"/>
+					  <input id="testname" name="name2" value="test"/>
 					  <div class="ui card">
 					  <div class="image">
 					    <img src="./images/avatar/kristy.png">
@@ -41,8 +41,6 @@
 			</div>
 		</div>
 	</div>
-	<script type="text/javascript">
-	$("#testname").value = "Harnasyrin";
-	//document.getElementById("testname").value = "Harnasyrin";
-</script>
+	<script type="text/javascript" src="./js/Homepage.js">
+	</script>
 </template>
